--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,8 @@
-<header> <a href="{{ '/' | relative_url }}"> <img src="{{ '/assets/img/logo-AB-limpieza.png' | relative_url }}" alt="{{ site.title }} logo"></a>
+<header>
+  <div id="cabecera-superior">
+    <span class="icono-info">☎</span> 615 45 56 67 · <span class="icono-info">✉</span> info@ablimpieza.com
+    </div>
+  <a href="{{ '/' | relative_url }}"> <img src="{{ '/assets/img/logo-AB-limpieza.png' | relative_url }}" alt="{{ site.title }} logo"></a>
 <nav>
 	<ul>
 		<li><a href="{{ '/' | relative_url }}">Inicio</a></li> <li><a href="{{ '/servicios' | relative_url }}">Servicios</a></li>
