--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,8 @@
 <header>
   <div id="cabecera-superior">
     <span class="icono-info">☎</span> 615 45 56 67 · <span class="icono-info">✉</span> info@ablimpieza.com
-    </div>
+  </div>
+  <div id="cabecera-pral">
   <a href="{{ '/' | relative_url }}"> <img src="{{ '/assets/img/logo-AB-limpieza.png' | relative_url }}" alt="{{ site.title }} logo"></a>
 <nav>
 	<ul>
@@ -9,5 +10,6 @@
 		<li><a href="{{ '/contacto' | relative_url }}">Contacto</a></li>
 	</ul>
 </nav>
+</div> <!-- #cabecera-pral -->
 </header>
 
