--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -206,7 +206,13 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
 
 
 
-/* cabecera superior */
+/* CABECERAS */
+
+/* Cabecera principal */
+
+#cabecera-pral  {
+  
+}
 
 #cabecera-superior {
   height: 40px;
