--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -208,12 +208,7 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
 
 /* CABECERAS */
 
-/* Cabecera principal */
-
-#cabecera-pral  {
-  
-}
-
+/* Cabecera superior  */
 #cabecera-superior {
   height: 40px;
   background-color: #14396e;
@@ -224,6 +219,19 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
   padding-right: 30px;
   padding-left: 30px;
   padding-top: .5em;
+}
+/* Cabecera principal */
+
+#cabecera-pral  {
+  position: fixed;
+  top: 60px;
+}
+#cabecera-pral li  {
+  display: inline-block;
+}
+#contenedor-logo  {
+  position: absolute;
+  height: 100%;
 }
 
 .icono-info  {
