--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -225,6 +225,9 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
 #cabecera-pral  {
   position: fixed;
   top: 60px;
+  width: 100%;
+  padding-right: 30px;
+  padding-left: 30px;
 }
 #cabecera-pral li  {
   display: inline-block;
@@ -233,6 +236,14 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
   position: absolute;
   height: 100%;
 }
+#cabecera-pral nav  {
+    float: right;
+    padding-left: 82px;
+    padding-top: 33px;
+    font-weight: 600;
+    font-size: 22px;
+}
+
 
 .icono-info  {
   
