--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -243,7 +243,9 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
     font-weight: 600;
     font-size: 22px;
 }
-
+.logo  {
+  max-height: 120px;
+}
 
 .icono-info  {
   
