--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -242,6 +242,7 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
     padding-top: 33px;
     font-weight: 600;
     font-size: 22px;
+    box-shadow: 0 0 7px rgba(0,0,0,0.1);
 }
 .logo  {
   max-height: 120px;
