--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -233,7 +233,6 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
 #cabecera-pral  {
     position: fixed;
     top: 40px;
-    top: 60px;
     width: 100%;
     padding-right: 30px;
     padding-left: 30px;
@@ -252,16 +251,18 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
 #cabecera-pral nav  {
     float: right;
     padding-left: 82px;
-    padding-top: 33px;
+    padding-top: 60px;
     font-weight: 600;
     font-size: 22px;
+    line-height: 2.5;
 }
 #cabecera-pral nav a, #cabecera-pral nav a:hover  {
   text-decoration: none;
 }
 
 .logo  {
-  max-height: 120px;
+    max-height: 110px;
+    /* vertical-align: middle; tal vez necesario más adelante */
 }
 
 /* Iconos información */
