--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -275,7 +275,7 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
   height: 1067px;
 }
 
-.frame-1 h2  {
+.descripcion-empresa  {
   font-size: 50px;
   font-weight: 700;
   position: relative;
