--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,8 @@
 <header>
   <div id="cabecera-superior">
-    <span class="icono-info">☎</span> 615 45 56 67 · <span class="icono-info">✉</span> info@ablimpieza.com
+    <span class="icono-tel"><a href="tel:+34615455667">+34 615 45 56 67</a></span>
+
+    · <span class="icono-email"><a href="mailto:info@ablimpieza.com" style="color: green; text-decoration: underline;">info@ablimpieza.com</a></span>
   </div>
   <div id="cabecera-pral">
     <div id="contenedor-logo">
