--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -278,11 +278,11 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
     background-repeat: no-repeat;
 }
 .icono-email::before  {
-    background-image: url('/iconos/icono-email.webp');
+    background-image: url('/assets/img//iconos/icono-email.webp');
 }
 
 .icono-tel::before {
-    background-image: url('/iconos/icono-telefono.webp');
+    background-image: url('/assets/img/iconos/icono-telefono.webp');
 }
 
 /* CONTENIDO HOME */
