--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -228,6 +228,10 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
   padding-top: .5em;
   z-index: 100000;
 }
+#cabecera-superior a {
+  color: white;
+}
+
 /* Cabecera principal */
 
 #cabecera-pral  {
