--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,9 @@
 <header>
   <div id="cabecera-superior">
-    <span class="icono-tel"><a href="tel:+34615455667">+34 615 45 56 67</a></span>
-
-    · <span class="icono-email"><a href="mailto:info@ablimpieza.com">info@ablimpieza.com</a></span>
+    <span>
+<img class="icono-tel" src="/assets/img/iconos/icono-telefono.webp" width="25px"> <a href="tel:+34615455667">+34 615 45 56 67</a></span>
+    · <span><img class="icono-email" src="/assets/img/iconos/icono-email.webp" width="25px"> 
+      <a href="mailto:info@ablimpieza.com">info@ablimpieza.com</a></span>
   </div>
   <div id="cabecera-pral">
     <div id="contenedor-logo">
@@ -16,4 +17,3 @@
 </nav>
 </div> <!-- #cabecera-pral -->
 </header>
-
