--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -269,25 +269,7 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
     /* vertical-align: middle; tal vez necesario más adelante */
 }
 
-/* Iconos información de la cabecera superior
-.icono-tel::before, .icono-email::before  {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 0;
-    transform: translateY(-50%);
-    width: 20px;
-    height: 20px;
-    background-size: contain;
-    background-repeat: no-repeat;
-}
-.icono-email::before  {
-    background-image: url('/assets/img/iconos/icono-email.webp');
-}
 
-.icono-tel::before {
-    background-image: url('/assets/img/iconos/icono-telefono.webp');
-}  */
 
 /* CONTENIDO HOME */
 
@@ -319,4 +301,30 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
 .descripcion-empresa h2  {
     font-size: 50px;
 }
+}
+
+
+/* Menú colapsable estilo acordeón */
+
+.colapsable {
+  background-color: #777;
+  color: white;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+}
+
+.activo .colapsable:hover {
+  background-color: #555;
+}
+
+.contenido {
+  padding: 0 18px;
+  display: none;
+  overflow: hidden;
+  background-color: #f1f1f1;
 }
