--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -336,3 +336,7 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
     background-position: center;
     background-size: cover;
 }
+
+.frame-1  {
+    background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp
+}
