--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -250,7 +250,7 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
 #contenedor-logo  {
   position: absolute;
   height: 100%;
-  line-height: 125px;
+  line-height: 125px; /* Este habilitahace que la regla vertical-align tenga efecto */
 }
 #cabecera-pral nav  {
     float: right;
