--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,6 +1,3 @@
----
----
-
 @import "{{ site.theme }}";
 
 /* FUENTES */
@@ -336,5 +333,5 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
 }
 
 .frame-1  {
-    background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp
+    background-image: url('/assets/img/mujer-limpieza-cristales-ventana-no-atrib-Pixabay.com.webp');
 }
