--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,6 +7,6 @@
   {% include header.html %}
   {{ content }}
   {% include footer.html %}
-  <script src="/assets/script.js"></script>
+  <script src="/assets/js/script.js"></script>
 </body>
 </html>
