--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -324,6 +324,8 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
   display: none;
   overflow: hidden;
   background-color: #f1f1f1;
+  max-height: 0;
+  transition: max-height 0.2s ease-out;
 }
 
 /* IMÁGENES DE FONDO */
