--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -321,7 +321,7 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
 
 .contenido {
   padding: 0 18px;
-  display: none;
+  /* display: none; */
   overflow: hidden;
   background-color: #f1f1f1;
   max-height: 0;
