--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -242,11 +242,11 @@ DISEÑO RESPOSIVE:
   text-align: left;
 }
 
-/* Add a dark background on topnav links and the dropdown button on hover */
+/* Add a dark background on topnav links and the dropdown button on hover 
 .cabecera-nav a:hover, .desplegable:hover .boton-despl {
   background-color: #555;
   color: white;
-}
+} */
 
 /* Add a grey background to dropdown (.desplegable, .contenido-despl) links on hover */
 .contenido-despl a:hover {
