--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -159,9 +159,10 @@ DISEÑO RESPOSIVE:
     font-size: 22px;
     line-height: 2.5;
 }
+/* Tal vez no será necesario
 #cabecera-pral nav a, #cabecera-pral nav a:hover  {
   text-decoration: none;
-}
+} */
 .logo  {
     max-height: 110px;
     /* vertical-align: middle; tal vez necesario más adelante */
@@ -179,7 +180,7 @@ DISEÑO RESPOSIVE:
 .cabecera-nav a {
   float: left;
   display: block;
-  color: #f2f2f2;
+  /* color: #f2f2f2; */
   text-align: center;
   padding: 14px 16px;
   text-decoration: none;
@@ -220,6 +221,7 @@ DISEÑO RESPOSIVE:
   background-color: inherit;
   font-family: inherit;
   margin: 0;
+  font-weight: 600;
 }
 
 /* Style the dropdown content (hidden by default) */
@@ -240,6 +242,7 @@ DISEÑO RESPOSIVE:
   text-decoration: none;
   display: block;
   text-align: left;
+  line-height: 1.2;
 }
 
 /* Add a dark background on topnav links and the dropdown button on hover 
