--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -193,18 +193,9 @@ DISEÑO RESPOSIVE:
   font-size: 17px;
 }
 
-/* Add an active class to highlight the current page */
+/* Add an active class to highlight the current page
+ Pendiente determinar efectos */
 .activo {
-  color: #fff;
-  text-shadow:
-      0 0 7px #fff,
-      0 0 10px #fff,
-      0 0 21px #fff,
-      0 0 42px #0fa,
-      0 0 82px #0fa,
-      0 0 92px #0fa,
-      0 0 102px #0fa,
-      0 0 151px #0fa;
 }
 
 /* Hide the link that should open and close the topnav on small screens */
