--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -132,6 +132,10 @@ DISEÑO RESPOSIVE:
 
 /* Cabecera principal */
 
+.header-pral  {
+    style="height: 203px;"
+}
+
 #cabecera-pral  {
     position: fixed;
     top: 40px;
