--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<header class="header-pral">
+<header>
   <div id="cabecera-superior">
     <span>
 <img class="icono-tel" src="/assets/img/iconos/icono-telefono.webp" width="22px"> <a href="tel:+34615455667">+34 615 45 56 67</a></span>
