--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,7 +4,7 @@
 <img class="icono-tel" src="/assets/img/iconos/icono-telefono.webp" width="22px"> <a href="tel:+34615455667">+34 615 45 56 67</a></span>
     · <span><img class="icono-email" src="/assets/img/iconos/icono-email.webp" width="25px"> 
       <a href="mailto:info@ablimpieza.com">info@ablimpieza.com</a></span>
-  </div>
+  </div> <!-- #cabecera-superior -->
   <div id="cabecera-pral">
     <div id="contenedor-logo">
       <a href="{{ '/' | relative_url }}"> <img class="logo"  src="{{ '/assets/img/logo-AB-limpieza.png' | relative_url }}" alt="{{ site.title }} logo"></a>
