--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -133,7 +133,7 @@ DISEÑO RESPOSIVE:
 /* Cabecera principal */
 
 .header-pral  {
-    style="height: 203px;"
+    height: 203px;
 }
 
 #cabecera-pral  {
