--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,7 +9,6 @@
       <a href="{{ '/' | relative_url }}"> <img class="logo"  src="{{ '/assets/img/logo-AB-limpieza.png' | relative_url }}" alt="{{ site.title }} logo"></a>
       </div> <!-- #contenedor-logo -->
 
-    <!--
 <nav class="menu-pral" id="cabecera-nav-pral">
   <ul>
     <li><a href="{{ '/' | relative_url }}" class="activo">Inicio</a></li>
@@ -22,12 +21,12 @@
 	    <a href="#tecnica">Limpieza técnica</a>
 	    <a href="#industrial">Limpieza industrial</a>
 	    <a href="#comunidades">Comunidades de propietarios</a>
-	  </div><!-- contenido-despl
-	</div><!-- .desplegable
+	  </div><!-- contenido-despl  -->
+	</div><!-- .desplegable -->
 	</a></li>
     <li><a href="{{ '/contacto' | relative_url }}">Contacto</a></li>
     <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
-  </ul> -->
+  </ul>
 </nav><!-- .menu-pral #cabecera-nav-pral -->
 </div> <!-- #cabecera-pral -->
 </header>
