--- a/_includes/header.html
+++ b/_includes/header.html
@@ -12,9 +12,9 @@
 <nav class="menu-pral" id="cabecera-nav-pral">
   <ul>
     <li><a href="{{ '/' | relative_url }}" class="activo">Inicio</a></li>
-    <li><a href="{{ '/servicios' | relative_url }}">
+    <li>
 	<div class="desplegable">
-	  <button class="boton-despl">Servicios
+	  <button class="boton-despl"><a href="{{ '/servicios' | relative_url }}">Servicios</a>
 	  <i class="fa fa-caret-down"></i>
 	  </button>
 	  <div class="contenido-despl">
@@ -23,7 +23,7 @@
 	    <a href="#comunidades">Comunidades de propietarios</a>
 	  </div><!-- contenido-despl  -->
 	</div><!-- .desplegable -->
-	</a></li>
+	</li>
     <li><a href="{{ '/contacto' | relative_url }}">Contacto</a></li>
     <li><a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a></li>
   </ul>
