--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,8 +11,7 @@
 
 <nav class="menu-pral" id="cabecera-nav-pral">
   <ul>
-    <li><a href="{{ '/' | relative_url }}" class="activo">Inicio</a></li>
-    <li>
+    <li><a href="{{ '/' | relative_url }}" class="activo">Inicio</a></li><li>
 	<div class="desplegable">
 	  <button class="boton-despl"><a href="{{ '/servicios' | relative_url }}">Servicios</a>
 	  <i class="fa fa-caret-down"></i>
