--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -486,3 +486,11 @@ box-shadow: 7px 10px 20px rgba(0,0,0,.8);
     background-position: center;
     background-size: cover;
 }
+
+/*
+ ** PIE DE PÁGINA
+ */
+
+footer  {
+    clear: both;
+}
