--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -129,7 +129,9 @@ DISEÑO RESPOSIVE:
 #cabecera-superior a {
   color: white;
 }
-
+#cabecera-superior img  {
+    vertical-align: middle;
+}
 /* Cabecera principal */
 
 .header-pral  {
