--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,8 +9,8 @@
       <a href="{{ '/' | relative_url }}"> <img class="logo"  src="{{ '/assets/img/logo-AB-limpieza.png' | relative_url }}" alt="{{ site.title }} logo"></a>
       </div> <!-- #contenedor-logo -->
 
-<nav class="menu-pral" id="cabecera-nav-pral">
-  <ul>
+<nav class="cabecera-nav" id="cabecera-nav-pral">
+  <ul class="menu-pral">
     <li><a href="{{ '/' | relative_url }}" class="activo">Inicio</a></li><li>
 	<div class="desplegable">
 	  <button class="boton-despl"><a href="{{ '/servicios' | relative_url }}">Servicios</a>
