--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -183,10 +183,7 @@ DISEÑO RESPOSIVE:
 /* Menú  de navegación colapsable en dispositivos móviles */
 
  /* Add a black background color to the top navigation */
-.cabecera-nav {
-  background-color: #333;
-  overflow: hidden;
-}
+.cabecera-nav {overflow: hidden;}
 
 /* Style the links inside the navigation bar */
 .cabecera-nav a {
@@ -274,7 +271,7 @@ Desequilibra la alineación de los menús, y tal vez no sea necesario
   }
 }
 
-/* The "responsive" class is added to the topnav with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
+/* The "responsive" class is added to the topnav (.cabecera-nav)  with JavaScript when the user clicks on the icon. This class makes the topnav look good on small screens (display the links vertically instead of horizontally) */
 @media screen and (max-width: 600px) {
   .cabecera-nav.responsive {position: relative;}
   .cabecera-nav.responsive a.icon {
